# hermes-agent

./: .envrc  .gitignore
boxingAgent/: Cargo.toml  README.md  build.sh  run.sh  voice.sh
boxingAgent/crates/boxing-cli/: Cargo.toml
boxingAgent/crates/boxing-cli/src/: acp.rs  cron.rs  lib.rs  main.rs
boxingAgent/crates/boxing-cli/tests/: cli_catalog.rs  cli_config.rs
boxingAgent/crates/boxing-config/: Cargo.toml
boxingAgent/crates/boxing-config/src/: doc.rs  envfile.rs  lib.rs  path.rs
boxingAgent/crates/boxing-core/: Cargo.toml
boxingAgent/crates/boxing-core/src/: async_delegation.rs  delegate.rs  lib.rs  memory_injector.rs
boxingAgent/crates/boxing-providers/: Cargo.toml
boxingAgent/crates/boxing-providers/src/: anthropic.rs  lib.rs  openai.rs  resolver.rs  sse.rs
boxingAgent/crates/boxing-state/: Cargo.toml
boxingAgent/crates/boxing-state/src/: lib.rs
boxingAgent/crates/boxing-tools/: Cargo.toml
boxingAgent/crates/boxing-tools/src/: bash.rs  clarify.rs  code_execution.rs  edit.rs  glob.rs  grep.rs  image_generate.rs  lib.rs  ls.rs  mcp.rs  memory.rs  oauth.rs  read.rs  search.rs  todo.rs  tts.rs  vision.rs  web.rs  write.rs
boxingAgent/crates/boxing-tools/src/tts/: edge.rs  mod.rs  proto.rs  volcano.rs
boxingAgent/crates/boxing-voice/: Cargo.toml
boxingAgent/crates/boxing-voice/src/: asr.rs  audio.rs  config.rs  kws.rs  lib.rs  runtime.rs  server.rs
boxingAgent/docs/: ACP_INTEGRATION.md
boxingAgent/scripts/: voice_test.py
boxingAgent/specs/: tools-phase2a.yaml
hermes-rs/: .gitignore  Cargo.toml  README.md
hermes-rs/crates/hermes-cli/: Cargo.toml
hermes-rs/crates/hermes-cli/src/: lib.rs  main.rs
hermes-rs/crates/hermes-cli/tests/: cli_catalog.rs  cli_config.rs
hermes-rs/crates/hermes-config/: Cargo.toml
hermes-rs/crates/hermes-config/src/: doc.rs  lib.rs  path.rs
hermes-rs/crates/hermes-core/: Cargo.toml
hermes-rs/crates/hermes-core/src/: lib.rs
hermes-rs/crates/hermes-providers/: Cargo.toml
hermes-rs/crates/hermes-providers/src/: anthropic.rs  lib.rs  openai.rs  resolver.rs
hermes-rs/crates/hermes-state/: Cargo.toml
hermes-rs/crates/hermes-state/src/: lib.rs
hermes-rs/crates/hermes-tools/: Cargo.toml
hermes-rs/specs/: cli-phase1.yaml  providers-phase1b.yaml  state-schema.yaml
