[workspace]
resolver = "2"
members = [
    "crates/boxing-config",
    "crates/boxing-state",
    "crates/boxing-providers",
    "crates/boxing-tools",
    "crates/boxing-core",
    "crates/boxing-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.82"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util"] }
regex = "1"
ignore = "0.4"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
bytes = "1"
async-trait = "0.1"
futures = "0.3"
boxing-config = { path = "crates/boxing-config" }
boxing-providers = { path = "crates/boxing-providers" }
boxing-core = { path = "crates/boxing-core" }
boxing-tools = { path = "crates/boxing-tools" }
rusqlite = { version = "0.32", features = ["bundled"] }
boxing-state = { path = "crates/boxing-state" }
uuid = { version = "1", features = ["v4"] }
