[workspace]
resolver = "2"
members = [
    "crates/hermes-config",
    "crates/hermes-state",
    "crates/hermes-providers",
    "crates/hermes-tools",
    "crates/hermes-core",
    "crates/hermes-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.82"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
hermes-config = { path = "crates/hermes-config" }
