[package]
name = "boxing-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
boxing-config.workspace = true
boxing-providers.workspace = true
boxing-core.workspace = true
boxing-tools.workspace = true
tokio.workspace = true

[[bin]]
name = "boxing-agent"
path = "src/main.rs"
