[package]
name = "boxing-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono = "0.4"
boxing-config.workspace = true
boxing-providers.workspace = true
boxing-core.workspace = true
boxing-tools.workspace = true
boxing-state.workspace = true
boxing-voice = { workspace = true, features = ["server"] }
rusqlite.workspace = true
tokio.workspace = true

[features]
default = []
voice-full = ["boxing-voice/full"]

[[bin]]
name = "boxing-agent"
path = "src/main.rs"
