[package]
name = "boxing-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
boxing-providers.workspace = true
boxing-tools.workspace = true
serde_json.workspace = true
futures.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
