[package]
name = "boxing-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
regex.workspace = true
ignore.workspace = true
glob.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
tokio.workspace = true
