[package]
name = "boxing-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing = "0.1"
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
base64.workspace = true
sherpa-onnx = { version = "1.13", optional = true }

[features]
default = ["server"]
server = ["dep:axum", "dep:tower-http", "dep:tokio-stream"]
sherpa = ["dep:sherpa-onnx"]
full = ["server", "sherpa"]

[lib]
name = "boxing_voice"
path = "src/lib.rs"
