[package]
name = "hermes-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
bytes.workspace = true
futures.workspace = true
hermes-config.workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio.workspace = true
